--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 **/*.p
 **/nppBackup/
+tester-host/target/debug
+tester-host/target/.rustc_info.json
+tester-host/target/CACHEDIR.TAG
+tester-host/Cargo.lock
